--- a/i18n/locales/zh-CN.json
+++ b/i18n/locales/zh-CN.json
@@ -5,7 +5,8 @@
     "open": "打开"
   },
   "home": {
-    "subtitle": "一套优雅现代的创意工具套件：文本/数据/媒体/地图/正则/时间等常用小工具，助你高效创作。"
+    "subtitle": "一套优雅现代的创意工具套件：文本/数据/媒体/地图/正则/时间等常用小工具，助你高效创作。",
+    "searchPlaceholder": "搜索名称或标签… /"
   },
   "tabs": {
     "all": "全部",
