--- a/i18n/locales/zh-TW.json
+++ b/i18n/locales/zh-TW.json
@@ -5,7 +5,8 @@
     "open": "打開"
   },
   "home": {
-    "subtitle": "一套優雅現代的創意工具套件：文字/資料/媒體/地圖/正則/時間等常用小工具，助你高效創作。"
+    "subtitle": "一套優雅現代的創意工具套件：文字/資料/媒體/地圖/正則/時間等常用小工具，助你高效創作。",
+    "searchPlaceholder": "搜尋名稱或標籤… /"
   },
   "tabs": {
     "all": "全部",
