--- a/i18n/locales/zh-CN.json
+++ b/i18n/locales/zh-CN.json
@@ -80,7 +80,7 @@
       "tags": ["单位转换", "长度", "重量", "温度", "面积", "体积", "速度"]
     },
     "pomodoro-timer": {
-      "name": "pomodoro-timer",
+      "name": "番茄工作法",
       "desc": "专注工作的番茄工作法计时器，支持工作/休息周期管理和统计",
       "tags": ["时间管理", "专注", "效率", "番茄工作法", "计时器"]
     },
@@ -90,7 +90,7 @@
       "tags": ["UTM", "营销跟踪", "链接生成", "二维码", "数据分析"]
     },
     "typing-practice": {
-      "name": "typing-practice",
+      "name": "打字练习",
       "desc": "多语言打字练习工具，支持英文、中文、代码和数字练习，实时统计速度和准确率",
       "tags": ["打字", "练习", "速度", "准确率", "WPM", "键盘"]
     },
@@ -100,7 +100,7 @@
       "tags": ["距离计算", "Haversine", "地理", "坐标", "方位角"]
     },
     "clipboard-manager": {
-      "name": "clipboard-manager",
+      "name": "剪贴板管理器",
       "desc": "智能剪贴板历史记录管理工具，支持内容分类和搜索",
       "tags": ["剪贴板", "历史记录", "复制粘贴", "管理工具", "效率"]
     },
@@ -370,7 +370,7 @@
       "tags": ["分数", "小数", "数学转换", "循环小数", "批量处理"]
     },
     "matrix-calculator": {
-      "name": "matrix-calculator",
+      "name": "矩阵计算器",
       "desc": "支持矩阵加减乘运算和行列式计算的数学工具",
       "tags": ["矩阵", "线性代数", "数学计算", "行列式", "数学工具"]
     },
