--- a/i18n/locales/zh-TW.json
+++ b/i18n/locales/zh-TW.json
@@ -80,7 +80,7 @@
       "tags": ["單位轉換", "長度", "重量", "溫度", "面積", "體積", "速度"]
     },
     "pomodoro-timer": {
-      "name": "pomodoro-timer",
+      "name": "番茄工作法",
       "desc": "專注工作的番茄工作法計時器，支援工作/休息週期管理和統計",
       "tags": ["時間管理", "專注", "效率", "番茄工作法", "計時器"]
     },
@@ -90,7 +90,7 @@
       "tags": ["UTM", "行銷追蹤", "連結產生", "QR Code", "資料分析"]
     },
     "typing-practice": {
-      "name": "typing-practice",
+      "name": "打字練習",
       "desc": "多語言打字練習工具，支援英文、中文、程式碼和數字練習，即時統計速度和準確率",
       "tags": ["打字", "練習", "速度", "準確率", "WPM", "鍵盤"]
     },
@@ -100,7 +100,7 @@
       "tags": ["距離計算", "Haversine", "地理", "座標", "方位角"]
     },
     "clipboard-manager": {
-      "name": "clipboard-manager",
+      "name": "剪貼簿管理器",
       "desc": "智慧剪貼簿歷史記錄管理工具，支援內容分類和搜尋",
       "tags": ["剪貼簿", "歷史記錄", "複製貼上", "管理工具", "效率"]
     },
@@ -370,7 +370,7 @@
       "tags": ["分數", "小數", "數學轉換", "循環小數", "批次處理"]
     },
     "matrix-calculator": {
-      "name": "matrix-calculator",
+      "name": "矩陣計算器",
       "desc": "支援矩陣加減乘運算和行列式計算的數學工具",
       "tags": ["矩陣", "線性代數", "數學計算", "行列式", "數學工具"]
     },
