--- a/i18n/locales/zh-CN.json
+++ b/i18n/locales/zh-CN.json
@@ -659,5 +659,15 @@
     "coolBlue": "星云蓝",
     "cyberPurple": "量子紫",
     "prismLaser": "棱镜激光"
+  },
+  "contact": {
+    "title": "联系方式",
+    "slogan": "创意无限，连接未来 · 让每一个想法都闪闪发光",
+    "wechat": "微信",
+    "website": "官网",
+    "clickToCopy": "点击复制",
+    "clickToVisit": "点击访问",
+    "copySuccess": "已复制 {type} 到剪贴板",
+    "copyError": "复制失败，请手动复制"
   }
 }
