style: 💄 optimize ui, add github card display

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -665,6 +665,7 @@
     "slogan": "Infinite Creativity, Connected Future · Making Every Idea Shine",
     "wechat": "WeChat",
     "website": "Website",
+    "github": "GitHub",
     "clickToCopy": "Click to copy",
     "clickToVisit": "Click to visit",
     "copySuccess": "{type} copied to clipboard",
