--- a/i18n/locales/zh-CN.json
+++ b/i18n/locales/zh-CN.json
@@ -665,6 +665,7 @@
     "slogan": "创意无限，连接未来 · 让每一个想法都闪闪发光",
     "wechat": "微信",
     "website": "官网",
+    "github": "GitHub",
     "clickToCopy": "点击复制",
     "clickToVisit": "点击访问",
     "copySuccess": "已复制 {type} 到剪贴板",
