--- a/i18n/locales/zh-TW.json
+++ b/i18n/locales/zh-TW.json
@@ -665,6 +665,7 @@
     "slogan": "創意無限，連接未來 · 讓每一個想法都閃閃發光",
     "wechat": "微信",
     "website": "官網",
+    "github": "GitHub",
     "clickToCopy": "點擊複製",
     "clickToVisit": "點擊訪問",
     "copySuccess": "已複製 {type} 到剪貼板",
